compiler/typ/tests/fixtures/diagnostics/0711_fcm_pack_with_type_mismatch_06.ml.infer.expected
File "0711_fcm_pack_with_type_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0711_fcm_pack_with_type_mismatch_06 is not a valid module name.

File "0711_fcm_pack_with_type_mismatch_06.ml", line 11, characters 16-22:
11 | let _ = (module M_zeta : Box_zeta with type t = bool)
                     ^^^^^^
Error: This expression has type (module Box_zeta with type t = bool)
       but an expression was expected of type
         (module Box_zeta with type t = M_zeta.t)
       Type bool is not compatible with type M_zeta.t = int
